# grpc-distributed-data-processing

./: .gitignore  README.md  REPORT.md  WHATS_NEW.md  benchmark.sh  run_mac2.sh
config/: topology.json
cpp/: CMakeLists.txt
cpp/client/: main.cpp
cpp/server/: chunk_manager.cpp  chunk_manager.hpp  data_store.cpp  data_store.hpp  main.cpp  node_service.cpp  node_service.hpp
proto/: mini2.proto
python/: node_server.py  requirements.txt
